--- a/mfscraping/pom.xml
+++ b/mfscraping/pom.xml
@@ -35,6 +35,12 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/lib/javacsv-2.0.jar</systemPath>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>2.7.2</version>
+		</dependency>
 
 	</dependencies>
 </project>
