--- a/mfscraping/pom.xml
+++ b/mfscraping/pom.xml
@@ -41,6 +41,12 @@
 			<artifactId>HikariCP</artifactId>
 			<version>2.7.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.8-dmr</version>
+		</dependency>
 
 	</dependencies>
 </project>
